Fixed issue with invisible device names in sidebar

--- a/src/main/webapp/m/css/traccar-mobile.css
+++ b/src/main/webapp/m/css/traccar-mobile.css
@@ -69,3 +69,7 @@
 .panel .content-block-title  {
     color: #eafac9;
 }
+
+#devicesList li {
+    -webkit-transform-style: preserve-3d;
+}
